--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5404,14 +5404,14 @@ a.btn.xplus-btn.pricing.active:hover {
 	position: relative;
 }
 .image_cover {
-	background-image: url(../images/bg-10.jpg);
+	background-image: url(../images/bg-15.jpg);
 	background-size: cover;
 	display: block;
 	position: absolute;
 	width: 50%;
 	z-index: 2;
 	top: 0;
-	right: 0;
+	left: 0;
 	bottom: 0;
 	background-position: 50% 50%;
 }
